1027. Про внесення змін до статті 81 Конституції України (щодо додаткових підстав дострокового припинення повноважень народного депутата України)

--- a/Конституція.md
+++ b/Конституція.md
@@ -484,31 +484,39 @@
 
 **Стаття 80.** Народні депутати України не несуть юридичної відповідальності за результати голосування або висловлювання у парламенті та його органах, за винятком відповідальності за образу чи наклеп.
 
-**Стаття 81.** Повноваження народних депутатів України припиняються одночасно з припиненням повноважень Верховної Ради України.
+**Стаття 81.** Повноваження  народних  депутатів України припиняються одночасно з припиненням повноважень Верховної Ради України.
 
-Повноваження народного депутата України припиняються достроково у разі:
+Повноваження народного  депутата  України припиняються достроково у разі:
 
-1) складення повноважень за його особистою заявою;
+    1) складення повноважень за  особистою  заявою – з моменту оголошення народним депутатом України такої заяви на пленарному засіданні Верховної Ради України;
 
-2) набрання законної сили обвинувальним вироком щодо нього;
+    2) набрання щодо нього законної сили обвинувальним вироком суду;
 
-3) визнання його судом недієздатним або безвісно відсутнім;
+    3) визнання його судом недієздатним, безвісно відсутнім або оголошення померлим;
 
-4) припинення його громадянства або його виїзду на постійне проживання за межі України;
+    4) припинення його громадянства України або його виїзду на постійне проживання за межі України;
 
-5) якщо протягом двадцяти днів з дня виникнення обставин, які призводять до порушення вимог щодо несумісності депутатського мандата з іншими видами діяльності, ці обставини ним не усунуто;
+    5) встановлення судом факту неособистого голосування народним депутатом України у Верховній Раді України, тобто голосування народним депутатом України замість іншого народного депутата України або надання народним депутатом України можливості проголосувати замість нього іншому народному депутату України, – з моменту набрання законної сили рішенням суду про встановлення такого факту;
 
-6) невходження народного депутата України, обраного від політичної партії (виборчого блоку політичних партій), до складу депутатської фракції цієї політичної партії (виборчого блоку політичних партій) або виходу народного депутата України із складу такої фракції;
+    6) невходження народного депутата України, обраного від політичної партії, до складу депутатської фракції цієї політичної партії або виходу народного депутата України зі складу такої фракції;
 
-7) його смерті.
+    7) відсутності його без поважних причин на третині пленарних засідань Верховної Ради України та/або засідань комітету Верховної Ради України, членом якого він є, протягом однієї чергової сесії; 
 
-Повноваження народного депутата України припиняються достроково також у разі дострокового припинення відповідно до Конституції України повноважень Верховної Ради України - в день відкриття першого засідання Верховної Ради України нового скликання.
+    8) порушення вимог щодо несумісності депутатського мандата з іншими видами діяльності, якщо протягом двадцяти днів із дня виникнення обставин, які призводять до порушення таких вимог, ці обставини ним не усунуто;
 
-Рішення про дострокове припинення повноважень народного депутата України у випадках, передбачених пунктами 1, 4 частини другої цієї статті, приймається Верховною Радою України, а у випадку, передбаченому пунктом 5 частини другої цієї статті, - судом.
+    9) його смерті.
 
-У разі набрання законної сили обвинувальним вироком суду щодо народного депутата України, визнання народного депутата України недієздатним або безвісно відсутнім його повноваження припиняються з дня набрання законної сили рішенням суду, а в разі смерті народного депутата України - з дня смерті, засвідченої свідоцтвом про смерть.
+Повноваження народного депутата України припиняються достроково також у разі дострокового припинення відповідно до Конституції України повноважень Верховної Ради України – у день відкриття першого засідання Верховної Ради України нового скликання.
 
-У разі невходження народного депутата України, обраного від політичної партії (виборчого блоку політичних партій), до складу депутатської фракції цієї політичної партії (виборчого блоку політичних партій) або виходу народного депутата України із складу такої фракції його повноваження припиняються достроково на підставі закону за рішенням вищого керівного органу відповідної політичної партії (виборчого блоку політичних партій) з дня прийняття такого рішення.
+У разі порушення вимог щодо несумісності депутатського мандата з іншими видами діяльності, відсутності народного депутата України без поважних причин на третині пленарних засідань Верховної Ради України та/або засідань комітету Верховної Ради України, членом якого він є, протягом однієї чергової сесії його повноваження припиняються достроково за рішенням Верховного Суду.
+
+У разі припинення громадянства України або виїзду народного депутата України на постійне проживання за межі України його повноваження припиняються з моменту ухвалення відповідного рішення Верховною Радою України.
+
+У разі смерті народного депутата України його повноваження припиняються з дня смерті, засвідченої свідоцтвом про смерть, без ухвалення рішення Верховною Радою України.
+
+У разі невходження народного депутата України, обраного від політичної партії, до складу депутатської фракції цієї політичної партії або виходу народного депутата України зі складу такої фракції його повноваження припиняються достроково на підставі закону за рішенням вищого керівного органу відповідної політичної партії з дня прийняття такого рішення. 
+
+У разі визнання народного депутата України судом недієздатним, безвісно відсутнім чи оголошення померлим його повноваження припиняються з дня набрання законної сили відповідним рішенням суду
 
 **Стаття 82.** Верховна Рада України працює сесійно.
 
