--- a/Конституція.md
+++ b/Конституція.md
@@ -1215,9 +1215,7 @@
 
 Засади організації і діяльності адвокатури та здійснення адвокатської діяльності в Україні визначаються законом.
 
-Виключно адвокат здійснює представництво іншої особи в суді, а також захист від кримінального обвинувачення.
-
-Законом можуть бути визначені винятки щодо представництва в суді у трудових спорах, спорах щодо захисту соціальних прав, щодо виборів та референдумів, у малозначних спорах, а також стосовно представництва малолітніх чи неповнолітніх осіб та осіб, які визнані судом недієздатними чи дієздатність яких обмежена.
+Виключно адвокат здійснює захист особи від кримінального обвинувачення
 
 ## Розділ IX
 ## ТЕРИТОРІАЛЬНИЙ УСТРІЙ УКРАЇНИ
