1014. Про внесення змін до статті 106 Конституції України (щодо закріплення повноважень Президента України утворювати незалежні регуляторні органи, Національне антикорупційне бюро України, призначати на посади та звільняти з посад Директора Національного антикорупційного бюро України і Директора Державного бюро розслідувань)

--- a/Конституція.md
+++ b/Конституція.md
@@ -845,7 +845,11 @@
 
 11) призначає на посаду та звільняє з посади за згодою Верховної Ради України Генерального прокурора;
 
+    11-1) утворює відповідно до закону Національне антикорупційне бюро України, призначає на посади та звільняє з посад у порядку, визначеному законами України, Директора Національного антикорупційного бюро України і Директора Державного бюро розслідувань;
+
 12) призначає на посади та звільняє з посад половину складу Ради Національного банку України;
+
+    12-1) утворює незалежні регуляторні органи, що здійснюють державне регулювання, моніторинг та контроль за діяльністю суб’єктів господарювання в окремих сферах, призначає на посади та звільняє з посад їх членів у порядку, визначеному законами України;
 
 13) призначає на посади та звільняє з посад половину складу Національної ради України з питань телебачення і радіомовлення;
 
