1015. Про внесення змін до статті 93 Конституції України (щодо законодавчої ініціативи народу)

--- a/Конституція.md
+++ b/Конституція.md
@@ -740,9 +740,11 @@
 
 Законом України оголошується амністія.
 
-**Стаття 93.** Право законодавчої ініціативи у Верховній Раді України належить Президентові України, народним депутатам України та Кабінету Міністрів України.
+**Стаття 93.** Право законодавчої ініціативи у Верховній Раді України належить народу, Президентові України, Кабінету Міністрів України, народним депутатам України та реалізується ними у випадках і порядку, визначених Конституцією України і законами України.
 
 Законопроекти, визначені Президентом України як невідкладні, розглядаються Верховною Радою України позачергово.
+
+Закон приймається відповідно до вимог законодавчої процедури, визначеної Конституцією України та законами України
 
 **Стаття 94.** Закон підписує Голова Верховної Ради України і невідкладно направляє його Президентові України.
 
