1016. Про внесення змін до статей 85 та 101 Конституції України (щодо уповноважених Верховної Ради України)

--- a/Конституція.md
+++ b/Конституція.md
@@ -582,6 +582,8 @@
 
 17) призначення на посаду та звільнення з посади Уповноваженого Верховної Ради України з прав людини; заслуховування його щорічних доповідей про стан дотримання та захисту прав і свобод людини в Україні;
 
+    17-1) призначення на посади та звільнення з посад уповноважених Верховної Ради України за додержанням Конституції України і законів в окремих сферах; заслуховування їх щорічних доповідей про стан додержання Конституції України і законів у відповідних сферах; 
+
 18) призначення на посаду та звільнення з посади Голови Національного банку України за поданням Президента України;
 
 19) призначення на посади та звільнення з посад половини складу Ради Національного банку України;
@@ -783,6 +785,8 @@
 Правовий статус Ради Національного банку України визначається законом.
 
 **Стаття 101.** Парламентський контроль за додержанням конституційних прав і свобод людини і громадянина здійснює Уповноважений Верховної Ради України з прав людини.
+
+Для здійснення парламентського контролю за додержанням Конституції України і законів в окремих сферах Верховна Рада України може призначати уповноважених Верховної Ради України, правовий статус яких визначається окремими законами
 
 ## Розділ V
 ## ПРЕЗИДЕНТ УКРАЇНИ
