1017. Про внесення змін до статей 76 та 77 Конституції України (щодо зменшення конституційного складу Верховної Ради України та закріплення пропорційної виборчої системи)

--- a/Конституція.md
+++ b/Конституція.md
@@ -446,21 +446,21 @@
 
 **Стаття 75.** Єдиним органом законодавчої влади в Україні є парламент - Верховна Рада України.
 
-**Стаття 76.** Конституційний склад Верховної Ради України - чотириста п’ятдесят народних депутатів України, які обираються на основі загального, рівного і прямого виборчого права шляхом таємного голосування строком на п’ять років.
+**Стаття 76.** Конституційний склад Верховної Ради України – триста народних депутатів України, які обираються строком на п'ять років. 
 
-Народним депутатом України може бути обрано громадянина України, який на день виборів досяг двадцяти одного року, має право голосу і проживає в Україні протягом останніх п’яти років.
+Народним депутатом України може бути громадянин України, який на день виборів досяг двадцяти одного року, має право голосу, постійно проживає в Україні не менше останніх п'яти років і володіє державною мовою.
 
-Не може бути обраним до Верховної Ради України громадянин, який має судимість за вчинення умисного злочину, якщо ця судимість не погашена і не знята у встановленому законом порядку.
+Не може бути народним депутатом України громадянин, який має судимість за вчинення умисного злочину, якщо ця судимість не погашена і не знята у встановленому законом порядку. 
 
 Повноваження народних депутатів України визначаються Конституцією та законами України.
 
-Строк повноважень Верховної Ради України становить п’ять років.
+Строк повноважень Верховної Ради України становить п'ять років
 
-**Стаття 77.** Чергові вибори до Верховної Ради України відбуваються в останню неділю жовтня п’ятого року повноважень Верховної Ради України.
+**Стаття 77.** Чергові вибори до Верховної Ради України відбуваються в останню неділю жовтня п'ятого року повноважень Верховної Ради України.
 
-Позачергові вибори до Верховної Ради України призначаються Президентом України і проводяться в період шістдесяти днів з дня опублікування рішення про дострокове припинення повноважень Верховної Ради України.
+Позачергові вибори до Верховної Ради України призначаються Президентом України і проводяться в період шістдесяти днів із дня опублікування рішення про дострокове припинення повноважень Верховної Ради України.
 
-Порядок проведення виборів народних депутатів України встановлюється законом.
+Верховна Рада України обирається за пропорційною виборчою системою. Порядок проведення виборів народних депутатів України встановлюється законом
 
 **Стаття 78.** Народні депутати України здійснюють свої повноваження на постійній основі.
 
@@ -1552,6 +1552,8 @@
    Представництво органів державної влади та органів місцевого самоврядування в судах виключно прокурорами або адвокатами здійснюється з 1 січня 2020 року.
 
    Представництво в суді у провадженнях, розпочатих до набрання чинності Законом України "Про внесення змін до Конституції України (щодо правосуддя)", здійснюється за правилами, які діяли до набрання ним чинності, - до ухвалення у відповідних справах остаточних судових рішень, які не підлягають оскарженню.
+
+17. Після набрання чинності Законом України "Про внесення змін до статей 76 та 77 Конституції України (щодо зменшення конституційного складу Верховної Ради України та закріплення пропорційної виборчої системи)" Верховна Рада України, обрана до набрання чинності зазначеним Законом, продовжує виконувати свої повноваження до наступних виборів народних депутатів України.
 
 ***
 
