78-IX.  Про режим спільного транзиту та запровадження національної електронної транзитної системи

--- a/Закони/Про_банки_і_банківську_діяльність.md
+++ b/Закони/Про_банки_і_банківську_діяльність.md
@@ -1861,6 +1861,8 @@
 
 Національний банк України має право надавати органам державної виконавчої служби для примусового виконання свої рішення про застосування до банку, філії іноземного банку заходу впливу у вигляді накладення штрафу, які відповідно до цього Закону є виконавчими документами та містять інформацію, що становить банківську таємницю. У такому разі органи державної виконавчої служби мають право розкривати одержану від Національного банку України інформацію, що містить банківську таємницю, учасникам виконавчого провадження та особам, які залучаються до проведення виконавчих дій.
 
+Національний банк України має право надавати центральному органу виконавчої влади, що реалізує державну митну політику, інформацію про банки, що збирається під час проведення банківського нагляду і становить банківську таємницю, у випадках, передбачених Законом України "Про режим спільного транзиту та запровадження національної електронної транзитної системи".
+
 При здійсненні тимчасової адміністрації або ліквідації неплатоспроможного банку Фонд гарантування вкладів фізичних осіб має право розкривати інформацію, що містить банківську таємницю, приймаючому банку, перехідному банку, інвестору, що придбаває неплатоспроможний або перехідний банк, іншим особам, які задіяні у процесі здійснення тимчасової адміністрації і ліквідації банку, а також на письмову вимогу органів державної влади, уповноважених здійснювати досудове розслідування, в разі виявлення порушення законодавства, що містить ознаки кримінального правопорушення, а також у справах щодо виявлення необґрунтованих активів та збору доказів їх необґрунтованості. Зазначені особи зобов'язані забезпечити збереження отриманої інформації, що містить банківську таємницю.
 
 Національний банк України відповідно до міжнародного договору України або за принципом взаємності має право надавати інформацію, отриману при здійсненні нагляду за діяльністю банків, органу банківського нагляду іншої держави, а також отримувати від органу банківського нагляду іншої держави таку інформацію. Надана (отримана) інформація може бути використана виключно з метою банківського нагляду або запобігання легалізації (відмиванню) доходів, одержаних злочинним шляхом, чи фінансуванню тероризму.
