1028. Про внесення зміни до статті 85 Конституції України (щодо консультативних, дорадчих та інших допоміжних органів Верховної Ради України)

--- a/Конституція.md
+++ b/Конституція.md
@@ -578,7 +578,7 @@
 
 15) прийняття Регламенту Верховної Ради України;
 
-    15-1) створення у межах коштів, передбачених у Державному бюджеті України, для здійснення своїх повноважень консультативних, дорадчих та інших допоміжних органів%
+15-1) створення у межах коштів, передбачених у Державному бюджеті України, для здійснення своїх повноважень консультативних, дорадчих та інших допоміжних органів;
 
 16) призначення на посади та звільнення з посад Голови та інших членів Рахункової палати;
 
