436-IX. Про внесення змін до Закону України "Про Державний бюджет України на 2020 рік" щодо забезпечення функціонування Фонду розвитку підприємництва

--- a/Закони/Про_Державний_бюджет_України_на_2020_рік.md
+++ b/Закони/Про_Державний_бюджет_України_на_2020_рік.md
@@ -6,13 +6,13 @@
 
 * доходи Державного бюджету України у сумі 1.095.580.446,2 тис. гривень, у тому числі доходи загального фонду Державного бюджету України - у сумі 975.170.869 тис. гривень та доходи спеціального фонду Державного бюджету України - у сумі 120.409.577,2 тис. гривень, згідно з додатком № 1 до цього Закону;
 
-* видатки Державного бюджету України у сумі 1.182.010.356,6 тис. гривень, у тому числі видатки загального фонду Державного бюджету України - у сумі 1.052.678.829,4 тис. гривень та видатки спеціального фонду Державного бюджету України - у сумі 129.331.527,2 тис. гривень;
+* видатки Державного бюджету України у сумі 1.184.010.356,6 тис. гривень, у тому числі видатки загального фонду Державного бюджету України - у сумі 1.052.678.829,4 тис. гривень та видатки спеціального фонду Державного бюджету України - у сумі 131.331.527,2 тис. гривень;
 
 * повернення кредитів до Державного бюджету України у сумі 7.375.047,4 тис. гривень, у тому числі повернення кредитів до загального фонду Державного бюджету України - у сумі 6.843.480,7 тис. гривень та повернення кредитів до спеціального фонду Державного бюджету України - у сумі 531.566,7 тис. гривень;
 
 * надання кредитів з Державного бюджету України у сумі 15.220.857 тис. гривень, у тому числі надання кредитів із загального фонду Державного бюджету України - у сумі 1.701.031 тис. гривень та надання кредитів із спеціального фонду Державного бюджету України - у сумі 13.519.826 тис. гривень;
 
-* граничний обсяг дефіциту Державного бюджету України у сумі 94.275.720 тис. гривень, у тому числі граничний обсяг дефіциту загального фонду Державного бюджету України - у сумі 72.365.510,7 тис. гривень та граничний обсяг дефіциту спеціального фонду Державного бюджету України - у сумі 21.910.209,3 тис. гривень, згідно з додатком № 2 до цього Закону;
+* граничний обсяг дефіциту Державного бюджету України у сумі 96.275.720 тис. гривень, у тому числі граничний обсяг дефіциту загального фонду Державного бюджету України - у сумі 72.365.510,7 тис. гривень та граничний обсяг дефіциту спеціального фонду Державного бюджету України - у сумі 23.910.209,3 тис. гривень, згідно з додатком № 2 до цього Закону;
 
 * оборотний залишок коштів Державного бюджету України у розмірі до 2 відсотків видатків загального фонду Державного бюджету України, визначених цією статтею.
 
@@ -102,6 +102,8 @@
 
 5) залишок коштів, джерелом формування яких у 2019 році були надходження конфіскованих коштів та коштів, отриманих від реалізації майна, конфіскованого за рішенням суду за вчинення корупційного та пов’язаного з корупцією правопорушення.
 
+6) надходження від дострокового погашення векселів Фонду гарантування вкладів фізичних осіб, що видані ним в обмін на облігації внутрішньої державної позики.
+
 **Стаття 13.** Установити, що джерелами формування спеціального фонду Державного бюджету України на 2020 рік у частині кредитування є надходження, визначені частиною третьою статті 30 Бюджетного кодексу України, а також такі надходження:
 
 1) повернення бюджетних позичок, наданих на закупівлю сільськогосподарської продукції за державним замовленням (контрактом) 1994-1997 років;
@@ -173,6 +175,8 @@
 27) облаштування військових комісаріатів (територіальних центрів комплектування та соціальної підтримки) та їх всебічне забезпечення (за рахунок джерел, визначених пунктом 5 статті 12 цього Закону) за новою бюджетною програмою;
 
 28) будівництво автотранспортної магістралі через р. Дніпро у м. Запоріжжі (автомобільна дорога загального користування державного значення Н-08 Бориспіль-Дніпро-Запоріжжя (через м. Кременчук) - Маріуполь "Під’їзд до о. Хортиця (автотранспортна магістраль через р. Дніпро у м. Запоріжжі)") (за рахунок джерел, визначених пунктом 5 статті 12 цього Закону) за новою бюджетною програмою.
+
+29) забезпечення функціонування Фонду розвитку підприємництва (за рахунок джерел, визначених пунктом 6 статті 12 цього Закону).
 
 **Стаття 15.** Установити, що у 2020 році Національний банк України після підтвердження зовнішнім аудитом та затвердження Радою Національного банку України річної фінансової звітності та формування Національним банком України резервів у порядку та розмірах, визначених Законом України "Про Національний банк України", перераховує до Державного бюджету України кошти на загальну суму не менш як 40.709.000 тис. гривень.
 
